<?xml version="1.0" encoding="UTF-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="widget_label" translatable="false">Stockify Widget</string>
    <string name="google_news_endpoint" translatable="false">https://news.google.com/</string>
    <string name="yahoo_news_endpoint" translatable="false">https://finance.yahoo.com/news/</string>
    <string name="yahoo_finance_endpoint" translatable="false">https://finance.yahoo.com/</string>
    <string name="suggestions_endpoint" translatable="false">https://query2.finance.yahoo.com/v1/finance/</string>
    <string name="yahoo_endpoint" translatable="false">https://query1.finance.yahoo.com/</string>
    <string name="yahoo_initial_load_endpoint" translatable="false">https://finance.yahoo.com/</string>
    <string name="yahoo_endpoint_quote_details" translatable="false">https://query1.finance.yahoo.com/v11/finance/</string>
    <string name="historical_data_endpoint" translatable="false">https://query1.finance.yahoo.com/v8/finance/</string>
    <string name="apewisdom_endpoint" translatable="false">https://apewisdom.io/api/v1.0/</string>
    <string name="dotdotdot" translatable="false">…</string>


    <string name="action_portfolio">Watchlist</string>
    <string name="refresh_updated_message">Refresh interval updated</string>
    <string name="action_widgets">Widgets</string>
    <string name="action_search">Search</string>
    <string name="action_feed">Trending</string>
    <string name="action_settings">Settings</string>
    <string name="app_settings">Settings</string>
    <string name="total_holdings">Total Holdings: %1$s</string>
    <string name="news_feed">Trending</string>
    <string name="action_Settings">Widget Settings</string>
    <string name="bg">Widget background</string>
    <string name="layout_type">Widget type</string>
    <string name="widget_width">Widget size</string>
    <string name="text_color">Text color</string>
    <string name="notification_alerts_required_message">The app requires the notifications permission to receive notifications.</string>
    <string name="auto_sort">Autosort</string>
    <string name="auto_sort_desc">Stocks will be sorted by percent change.</string>
    <string name="hide_header">Hide widget header</string>
    <string name="hide_header_desc">Fetch time and refresh button.</string>
    <string name="bold_change">Bold text</string>
    <string name="bold_change_desc">Show changes and market value in bold</string>
    <string name="setting_currency">Show currency</string>
    <string name="setting_currency_desc">Show currency in the widget</string>
    <string name="bg_updated_message">Background updated</string>
    <string name="layout_updated_message">Layout type updated</string>
    <string name="notification_alerts">Notification alerts</string>
    <string name="notification_alerts_desc">Receive notification alerts</string>
    <string name="update_interval">Update interval</string>
    <string name="choose_text_size">Widget text size</string>
    <string name="widget_width_updated_message">Widget size updated</string>
    <string name="text_color_updated_message">Text color updated</string>
    <string name="error_symbol">Invalid symbol</string>
    <string name="error_fetching_stock">Error fetching stock</string>
    <string name="no_network_message">No network connection</string>
    <string name="refresh_failed">Refresh failed</string>
    <string name="news_fetch_failed">Failed to fetch news</string>
    <string name="graph_fetch_failed">Failed to fetch data</string>
    <string name="error_fetching_suggestions">Error fetching suggestions</string>
    <string name="number_of_shares">No. of Shares : </string>
    <string name="shares">Shares</string>
    <string name="equity_value">Equity Value</string>
    <string name="value">Value</string>
    <string name="alert_above_error">Alert Below must be less than Alert Above</string>
    <string name="alert_below_error">Alert Above must be more than Alert Below</string>
    <string name="alert_dismiss">Dismiss</string>
    <string name="add_alerts">Alerts</string>
    <string name="alerts_disabled">Turn On Notification Settings</string>
    <string name="desc_channel_summary">Daily summary</string>
    <string name="price">Price : </string>
    <string name="add_position">Positions</string>
    <string name="add">Add</string>
    <string name="done">Done</string>
    <string name="remove">Remove</string>
    <string name="select_widget">Select Widget</string>
    <string name="change_instructions">On your widget, click on the change to switch between change percent and change value</string>
    <string name="add_stock">Add Stocks</string>
    <string name="holdings">Holdings</string>
    <string name="average_price">Average Price</string>
    <string name="gain">Gain</string>
    <string name="loss">Loss</string>
    <string name="gain_loss">Gain/Loss</string>
    <string name="change_percent">% Change</string>
    <string name="change_amount">Change</string>
    <string name="day_change_amount">Day Change</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_number">Invalid number</string>
    <string name="already_in_portfolio">%1$s is already in your portfolio</string>
    <string name="added_to_list">%1$s added to your portfolio</string>
    <string name="next_fetch">Next fetch: %1$s</string>
    <string name="last_fetch">Last fetch: %1$s</string>
    <string name="enter_a_symbol">Enter a symbol</string>
    <string name="no_symbols">¯\\_(ツ)_/¯\nNo symbols</string>
    <string name="error_fetching_news">¯\\_(ツ)_/¯\nError fetching news</string>
    <string name="widget_name">Widget name</string>
    <string name="widget_name_updated">Widget name updated</string>
    <string name="current_positions">Current Positions</string>
    <string name="positions">Positions</string>
    <string name="recent_news">Recent News</string>
    <string name="no_data">¯\\_(ツ)_/¯\nNo data</string>
    <string name="expand">Expand</string>
    <string name="one_day_short">1D</string>
    <string name="two_weeks_short">1W</string>
    <string name="one_month_short">1M</string>
    <string name="three_month_short">3M</string>
    <string name="one_year_short">1Y</string>
    <string name="five_years_short">5Y</string>
    <string name="max">Max</string>
    <string name="widgets">Widgets</string>
    <string name="how_to_title">How to add a widget</string>
    <string name="how_to">- Long-press an empty space on your home screen to bring up the menu\n\n- Now select the \'Widgets\' option.\n\n- Select the \'Stocks Widget\' item from the list of widgets.\n\n- You can add multiple widgets each with their own portfolio.</string>
    <string name="notes">Notes</string>
    <string name="alerts">Alerts</string>
    <string name="target_alert">Target Value</string>
    <string name="alert_percentage">Change %</string>
    <string name="alert_above_notification_title">%1$s &gt; %2$s at %3$s</string>
    <string name="alert_below_notification_title">%1$s &lt; %2$s at %3$s</string>
    <string name="alert_above_notification">%1$s is now above %2$s at %3$s</string>
    <string name="alert_below_notification">%1$s is now below %2$s at %3$s</string>
    <string name="remove_holding">Are you sure you want to remove the entry %1$s from your portfolio?</string>
    <string name="desc_channel_alerts">Stock alerts</string>
    <string name="notification_summary">Daily summary</string>
    <string name="notification_summary_title">Your Watchlist today Looks like...</string>
    <string name="app_theme">App and widget theme</string>
    <string name="text_size_updated_message">Text size updated</string>
    <string name="quote_details_open">Open</string>
    <string name="quote_details_day_range">Day\'s Range</string>
    <string name="quote_details_ftw_range">52 Week Range</string>
    <string name="quote_details_volume">Volume</string>
    <string name="quote_details_market_cap">Market Cap</string>
    <string name="quote_details_pe_ratio">PE Ratio</string>
    <string name="quote_details_earnings_date">Earnings Date</string>
    <string name="quote_details_dividend_rate">Dividend Rate</string>
    <string name="quote_details_dividend_date">Dividend Date</string>
    <string name="quote_details_gross_margins">Gross Margins</string>
    <string name="quote_details_profit_margins">Profit Margins</string>
    <string name="quote_details_revenue_growth">Revenue Growth</string>
    <string name="quote_details_earnings_growth">Earnings Growth</string>
    <string name="date_format_long">MMM dd, yyyy</string>
    <string name="number_format_thousands">%1$.2fK</string>
    <string name="number_format_millions">%1$.2fM</string>
    <string name="number_format_billions">%1$.2fB</string>
    <string name="number_format_trillions">%1$.2fT</string>
    <string name="quote_change_pos">+%1$.2f</string>
    <string name="quote_change_neg">%1$.2f</string>
    <string name="warningtxt">
        This includes your username, password, email address, profile information, and any content you have created or shared.
    </string>
    <string name="profileTxt">
        We get your personal information from the register process. If you want to make changes on your personal information, contact our support.
    </string>
    <string name="quote_change_percent_pos">+%1$.2f%%</string>
    <string name="quote_change_percent_neg">%1$.2f%%</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
