<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/action_search"
      android:title="@string/action_feed"
      android:icon="@drawable/baseline_query_stats_24"
      app:showAsAction="always"/>

  <item
      android:id="@+id/action_feed"
      android:title="News"
      android:icon="@drawable/news"
      app:showAsAction="always"/>

  <item
      android:id="@+id/action_portfolio"
      android:title="@string/action_portfolio"
      android:icon="@drawable/trendingwatch"
      app:showAsAction="always"/>

  <item
      android:id="@+id/action_widgets"
      android:title="@string/action_widgets"
      android:icon="@drawable/baseline_space_dashboard_24"
      app:showAsAction="always"/>
  <item
      android:id="@+id/action_settings"
      android:title="@string/action_settings"
      android:icon="@drawable/settings"
      app:showAsAction="always"/>
</menu>