<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

  <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:title="@string/add_position"
        app:navigationIcon="?attr/homeAsUpIndicator"
        />

  </com.google.android.material.appbar.AppBarLayout>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

      <TextView
          android:id="@+id/tickerName"
          style="@style/Widget.StocksWidget.TextView.TitleLarge"
          android:textAppearance="@style/TextAppearance.StocksWidget.TitleLarge"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="20dp"
          android:layout_marginRight="16dp"
          android:gravity="left"
          tools:text="GOOGLE"
          android:textSize="30sp"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="16dp"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="0dp"
            android:textSize="19sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.4"
            android:text="@string/number_of_shares"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sharesInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="0.6"
            >

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/shares"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:digits="0123456789.,"
              android:gravity="end"
              android:inputType="numberDecimal"
              android:maxLength="9"
              android:maxLines="1"
              android:nextFocusDown="@+id/price"
              android:nextFocusForward="@+id/price"
              android:textAlignment="textEnd" />
        </com.google.android.material.textfield.TextInputLayout>

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="10dp"
          android:layout_marginRight="16dp"
          android:gravity="center_vertical"
          android:orientation="horizontal"
          >

        <TextView
            android:layout_width="0dp"
            android:textSize="19sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.4"
            android:text="@string/price"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_weight="0.6"
            >
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/price"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="end"
              android:imeOptions="actionDone"
              android:inputType="numberDecimal"
              android:digits="0123456789.,"
              android:maxLength="9"
              android:maxLines="1"
              android:textAlignment="textEnd"
              />
        </com.google.android.material.textfield.TextInputLayout>
      </LinearLayout>

      <Button
          style="@style/ButtonStyle"
          android:id="@+id/addButton"
          android:layout_width="200dp"
          android:layout_height="50dp"
          android:layout_gravity="center_horizontal"
          android:layout_marginStart="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="16dp"
          android:layout_marginRight="16dp"
          android:layout_marginBottom="20dp"
          android:text="@string/add"
          android:textSize="20sp"
          />

      <TextView
          style="@style/Widget.StocksWidget.TextView.LabelLarge"
          android:textAppearance="@style/TextAppearance.StocksWidget.LabelLarge"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:layout_marginStart="16dp"
          android:layout_marginLeft="16dp"
          android:layout_marginTop="20dp"
          android:layout_marginEnd="16dp"
          android:layout_marginRight="16dp"
          android:layout_marginBottom="8dp"
          android:text="@string/current_positions"
          android:textSize="19sp"
          />


      <com.google.android.material.card.MaterialCardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            >

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              >

            <TextView
                style="@style/Widget.StocksWidget.TextView.LabelLarge"
                android:textAppearance="@style/TextAppearance.StocksWidget.LabelLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/shares"
                android:textSize="18sp"
                />

            <TextView
                style="@style/Widget.StocksWidget.TextView.LabelLarge"
                android:textAppearance="@style/TextAppearance.StocksWidget.LabelLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/price"
                android:textSize="18sp"
                />

            <TextView
                style="@style/Widget.StocksWidget.TextView.LabelLarge"
                android:textAppearance="@style/TextAppearance.StocksWidget.LabelLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/value"
                android:textSize="18sp"
                />

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                />

          </LinearLayout>

          <LinearLayout
              android:id="@+id/positionsHolder"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:orientation="vertical"
              />

          <View
              android:layout_width="match_parent"
              android:layout_height="0.75dp"
              android:layout_marginTop="12dp"
              android:layout_marginBottom="12dp"
              android:background="@color/divider"
              />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              >

            <TextView
                android:id="@+id/totalShares"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/large_text"
                tools:text="5.00"
                />

            <TextView
                android:id="@+id/averagePrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/large_text"
                tools:text="20.00"
                />

            <TextView
                android:id="@+id/totalValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/large_text"
                tools:text="100.00"
                />

            <View
                android:layout_width="24dp"
                android:layout_height="24dp"
                />

          </LinearLayout>

        </LinearLayout>
      </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
  </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>